--- a/src/app/admin/components/products/product-create/product-create.component.html
+++ b/src/app/admin/components/products/product-create/product-create.component.html
@@ -25,7 +25,7 @@
       </div>
 
       <!-- Vergi -->
-      <div class="col-md-6">
+      <!-- <div class="col-md-6">
         <div class="form-floating">
           <input type="number" class="form-control" id="tax" formControlName="tax" placeholder="Vergi oranını girin"
             [class.is-invalid]="productForm.get('tax').invalid && productForm.get('tax').touched">
@@ -34,7 +34,7 @@
             Geçerli bir vergi oranı girin
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Marka Seçimi -->
       <div class="col-md-6">
