--- a/src/app/admin/components/products/product-update/product-update.component.html
+++ b/src/app/admin/components/products/product-update/product-update.component.html
@@ -41,13 +41,13 @@
             <input matInput formControlName="varyantGroupID" placeholder="Varyant Grup ID girin">
         </mat-form-field>
 
-        <mat-form-field appearance="outline">
+        <!-- <mat-form-field appearance="outline">
             <mat-label>Vergi Oranı</mat-label>
             <input matInput type="number" formControlName="tax" placeholder="Vergi oranı girin">
             <mat-error *ngIf="productForm.get('tax').hasError('required') || productForm.get('tax').hasError('min')">
                 Geçerli bir vergi oranı girin
             </mat-error>
-        </mat-form-field>
+        </mat-form-field> -->
 
         <mat-form-field appearance="outline">
             <mat-label>Stok</mat-label>
