--- a/src/app/ui/components/category/categories-sidebar/categories-sidebar.component.html
+++ b/src/app/ui/components/category/categories-sidebar/categories-sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar-overlay" [class.active]="isOpen" (click)="close()"></div>
     <div class="sidebar" [class.active]="isOpen">
       <div class="sidebar-header">
-        <h5>Kategoriler</h5>
+        <h5>Categories</h5>
         <button class="close-btn" (click)="close()">×</button>
       </div>
       <div class="sidebar-content">
