--- a/src/app/ui/components/login/login-popover/login-popover.component.html
+++ b/src/app/ui/components/login/login-popover/login-popover.component.html
@@ -1,45 +1,45 @@
 <div class="login-popover" [class.show]="isVisible" [class.dark-theme]="isDarkTheme">
-    <div class="popover-content">
-      <div class="popover-header">
-        <h5>Welcome Back</h5>
-        <button type="button" class="btn-close" (click)="close()">×</button>
-      </div>
-      
-      <form #loginForm="ngForm" (ngSubmit)="login(txtUsernameOrEmail.value, txtPassword.value)">
-        <div class="form-floating mb-3">
-          <input #txtUsernameOrEmail 
-                 type="text" 
-                 class="form-control" 
-                 id="usernameOrEmail" 
-                 placeholder=" "
-                 required>
-          <label for="usernameOrEmail">Username or Email</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input #txtPassword 
-                 type="password" 
-                 class="form-control" 
-                 id="password" 
-                 placeholder=" "
-                 required>
-          <label for="password">Password</label>
-        </div>
-
-        <div class="forgot-password mb-3">
-          <a routerLink="/password-reset" (click)="close()">Forgot Password?</a>
-        </div>
-
-        <button type="submit" class="btn-login" [disabled]="loading">
-          <span [class.invisible]="loading">Sign In</span>
-          <app-button-spinner *ngIf="loading"></app-button-spinner>
-        </button>
-
-        <p class="register-link">
-          Don't have an account? 
-          <a routerLink="/register" (click)="close()">Sign up</a>
-        </p>
-      </form>
+  <div class="popover-content">
+    <div class="popover-header">
+      <h5>{{ 'auth.welcomeBack' | translate }}</h5>
+      <button type="button" class="btn-close" (click)="close()">×</button>
     </div>
+    
+    <form #loginForm="ngForm" (ngSubmit)="login(txtUsernameOrEmail.value, txtPassword.value)">
+      <div class="form-floating mb-3">
+        <input #txtUsernameOrEmail 
+               type="text" 
+               class="form-control" 
+               id="usernameOrEmail" 
+               [placeholder]="'auth.usernameOrEmail' | translate"
+               required>
+        <label for="usernameOrEmail">{{ 'auth.usernameOrEmail' | translate }}</label>
+      </div>
+ 
+      <div class="form-floating mb-3">
+        <input #txtPassword 
+               type="password" 
+               class="form-control" 
+               id="password" 
+               [placeholder]="'auth.password' | translate"
+               required>
+        <label for="password">{{ 'auth.password' | translate }}</label>
+      </div>
+ 
+      <div class="forgot-password mb-3">
+        <a routerLink="/password-reset" (click)="close()">{{ 'auth.forgotPassword' | translate }}</a>
+      </div>
+ 
+      <button type="submit" class="btn-login" [disabled]="loading">
+        <span [class.invisible]="loading">{{ 'auth.signIn' | translate }}</span>
+        <app-button-spinner *ngIf="loading"></app-button-spinner>
+      </button>
+ 
+      <p class="register-link">
+        {{ 'auth.noAccount' | translate }}
+        <a routerLink="/register" (click)="close()">{{ 'auth.signUp' | translate }}</a>
+      </p>
+    </form>
   </div>
-  <div class="overlay" [class.show]="isVisible" (click)="close()"></div>
+ </div>
+ <div class="overlay" [class.show]="isVisible" (click)="close()"></div>
