--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
-//@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 $home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
